--- a/Site-2/estilo.css
+++ b/Site-2/estilo.css
@@ -4,21 +4,23 @@ body {
 }
 
 .topo {
-    list-style: none;
+    position: relative;
     background-color: rgb(34, 24, 31);
-    overflow: hidden;
-    display: flex;
-    justify-content: space-around;
-    height: 8vh;
+    height: 9vh;
     font-family: Arial, Helvetica, sans-serif;
 }
 .logo {
+    position: relative;
     float: left;
-    color: violet;
 }
 .logoEstilo {
+    border-radius: 7px;
+    position: absolute;
+    padding: 4px;
+    background-color: rgb(35, 20, 124);
+    color: rgb(255, 255, 255);
+    text-decoration: none;
     font-size: 5vh;
-    
 }
 .menu {
     list-style: none;
@@ -26,10 +28,21 @@ body {
     float: right;
     
 }
-a {
-    text-decoration: none;
+.sobre {
+    
 }
+
+.login {
+    
+}
+
+.cadastro {
+    
+}
+
 .m {
+    
+    text-decoration: none;
     color: white;
 }
 
