--- a/Site-2/estilo.css
+++ b/Site-2/estilo.css
@@ -2,11 +2,11 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
 } 
 
 body {
     height: 100%;
-    background-color: hotpink;
 }
 
 a {
@@ -63,33 +63,56 @@ nav {
 }
 
 footer {
+    position: relative;
     background-color: gray;
     padding-top: 25px;
     padding-bottom: 25px;
     width: 100%;
+    height: 200px;
+    
 }
 .info1 {
     position: relative;
-    display: inline-block;
-    margin-right: 50px;
+    float: left;
     /* background-color: aqua; */
-    left: 100%;
-    transform: translateX(-100%);
+    margin-top: 25px;
+    margin-left: 10vw;
+    /* background-color: aqua; */
+    /* left: 100%;
+    transform: translateX(-100%); */
 
+}
+
+.MB {
+    position: relative;
+    margin-bottom: 30px;
+    color: white;
+    
+}
+.MB:last-child {
+    margin-bottom: 0;
+}
+.MB a {
+    font-weight: bold;
+    color: white;
 }
 .baixo {
     position: relative;
     /* background-color: green; */
     display: inline-block;
-    /* transform: translateX(-50%); */
+    
 }
 .info2 {
-    left: 0;
-    margin-left: 150px;
-    margin-bottom: 20px;
+    margin-top: 17px;
+    float: right;
+    margin-right: 10vw;
 }
+
 .info2 img{
     position: relative;
+    width: 180px;
+}
+
+@media screen {
     
-    width: 200px;
 }
