--- a/Site-2/login-estilo.css
+++ b/Site-2/login-estilo.css
@@ -1,4 +1,21 @@
 
+main {
+    margin-top: 50px;
+    margin-right: 200px;
+    margin-left: 200px;
+    margin-bottom: 50px;
+}
+
+.container-1 {
+    width: 100%;
+    height: 250px;
+    background-color: aqua;
+}
+
+.content-1 {
+    
+}
+
 p {
     font-size: 20px;
     margin-top: 10px;
