--- a/Site-2/estilo.css
+++ b/Site-2/estilo.css
@@ -79,7 +79,7 @@ footer {
     padding-bottom: 25px;
     width: 100%;
     height: 200px;
-    
+    border: solid 2px rgb(197, 193, 193)
 }
 
 .info1 {
