--- a/Site-2/Cadastro-estilo.css
+++ b/Site-2/Cadastro-estilo.css
@@ -6,3 +6,46 @@ body {
     background-repeat: no-repeat;
 }
 
+main {
+    margin-top: 50px;
+    margin-right: 200px;
+    margin-left: 200px;
+    margin-bottom: 50px;
+
+}
+
+.container-1 {
+    position: relative;
+    width: 100%;
+    height: 380px;
+    overflow: hidden;
+    padding: 25px;
+   
+}
+
+.content-1 {
+    width: 45%;
+    height: 100%;
+    background-color: rgb(167, 167, 167);
+    float: left;
+    margin-right: 10px;
+    border-radius: 10px;
+    padding: 20px;
+
+}
+
+.content-2 {
+    width: 45%;
+    height: 100%;
+    background-color: rgb(167, 167, 167);
+    float: right;
+    border-radius: 10px;
+    padding: 20px;
+    
+}
+
+.content-1 div, .content-2 div {
+    width: 100%;
+    height: 100%;
+
+}
