--- a/Site-2/Cadastro-estilo.css
+++ b/Site-2/Cadastro-estilo.css
@@ -17,14 +17,13 @@ main {
 .container-1 {
     position: relative;
     width: 100%;
-    height: 380px;
-    overflow: hidden;
+    height: 460px;
     padding: 25px;
    
 }
 
 .content-1 {
-    width: 45%;
+    width: 70%;
     height: 100%;
     background-color: rgb(167, 167, 167);
     float: left;
@@ -34,18 +33,21 @@ main {
 
 }
 
-.content-2 {
-    width: 45%;
-    height: 100%;
-    background-color: rgb(167, 167, 167);
-    float: right;
-    border-radius: 10px;
-    padding: 20px;
-    
-}
-
-.content-1 div, .content-2 div {
+.content-1 div {
     width: 100%;
     height: 100%;
-
 }
+
+.form-cadastro input {
+    width: 250px;
+    height: 30px;
+    font-size: 16px;
+    padding-left: 3px;
+    display: block;
+    margin-bottom: 13px;
+}
+
+#sign-up-user {
+    margin-top: 40px;
+}
+
