--- a/Site-2/Cadastro-2-estilo.css
+++ b/Site-2/Cadastro-2-estilo.css
@@ -17,7 +17,7 @@ main {
 .container-1 {
     position: relative;
     width: 100%;
-    height: 380px;
+    height: 420px;
     padding: 25px;
    
 }
@@ -49,7 +49,12 @@ main {
     background-color: rgba(138, 221, 214, 0.342);
 }
 
-#sign-up-user {
+#audio-reader {
+    background-color: rgba(255, 255, 255, 0);
+    border: none;
+}
+
+#sign-up-reader {
     margin-top: 40px;
     width: 100px;
     height: 37px;
@@ -63,7 +68,7 @@ main {
     transition-property: background-color;
 }
 
-#sign-up-user:hover {
+#sign-up-reader:hover {
     background-color: rgb(33, 33, 172);
 }
 
