--- a/Site-2/Cadastro-2-estilo.css
+++ b/Site-2/Cadastro-2-estilo.css
@@ -38,6 +38,10 @@ main {
     height: 100%;
 }
 
+.content-1 h3 {
+    margin-bottom: 15px;
+}
+
 .form-cadastro input {
     width: 250px;
     height: 30px;
