--- a/Site-2/Cadastro-estilo.css
+++ b/Site-2/Cadastro-estilo.css
@@ -38,6 +38,10 @@ main {
     height: 100%;
 }
 
+.content-1 h3 {
+    margin-bottom: 12px;
+}
+
 .form-cadastro input {
     width: 250px;
     height: 30px;
@@ -50,7 +54,7 @@ main {
 }
 
 #sign-up-user {
-    margin-top: 40px;
+    margin-top: 20px;
     width: 100px;
     height: 37px;
 
