--- a/Site-2/Login-estilo.css
+++ b/Site-2/Login-estilo.css
@@ -33,6 +33,10 @@ main {
     box-shadow: 2px 3px rgba(0, 0, 0, 0.164);
 }
 
+.content-1 h3 {
+    margin-bottom: 15px;
+}
+
 .form-login input {
     width: 250px;
     height: 30px;
