--- a/Site-2/estilo.css
+++ b/Site-2/estilo.css
@@ -160,7 +160,7 @@ footer {
     width: 180px;
 }
 
-@media only screen and (max-width: 900px) {
+@media only screen and (max-width: 1000px) {
     
 * {
     margin: 0;
@@ -270,8 +270,9 @@ footer {
     padding-top: 25px;
     padding-bottom: 25px;
     width: 100%;
-    height: 200px;
-    border-top: solid 2px rgb(197, 193, 193)
+    height: 400px;
+    border-top: solid 2px rgb(197, 193, 193);
+    display: inline-block;
 }
 
 .info1 {
