--- a/Site-4/css/estilo.css
+++ b/Site-4/css/estilo.css
@@ -15,15 +15,17 @@ body {
     line-height: 1.5;
     color: #212529;
     background-color: #fff;
-    /* background-image: url(./img-css/Background-1.jpg);
+    background-image: url(./img-css/Background-1.jpg);
     background-repeat: no-repeat;
-    background-size: 100%; */
+    background-size: 100%;
 }
 
 .header {
     width: 100%;
     height: 3rem;
     background-color: rgb(28, 15, 41);
+    padding-left: 2rem;
+    padding-right: 2rem;
 }
 
 .header .container {
@@ -62,7 +64,7 @@ body {
     
     color: white;
     font-weight: bold;
-    font-size: 1.4rem;
+    font-size: 1.25rem;
     margin-right: 2rem;
 }
 
@@ -75,7 +77,7 @@ body {
 .redes-sociais {
     position: relative;
     display: inline-flex;
-    width: 1.2rem;
+    width: 1.1rem;
     top: 0.4rem;
     margin-right: 0.8rem;
 }
@@ -143,7 +145,7 @@ body {
     font-size: 1.15rem;
     margin-left: 2rem;
     text-align: justify;
-    height: fit-content;
+    height: max-content;
     top: 5rem;
     transform: translateY(-50%);
 }
@@ -159,6 +161,8 @@ body {
     height: 13rem;
     background-color: gray;
     border-top: rgba(0, 0, 0, 0.219) solid 0.15rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
 }
 
 .footer .container{
@@ -188,4 +192,20 @@ body {
     position: relative;
     width: 2.5rem;
 
+}
+
+@media (max-width: 924px) {
+    .carousel .content div {
+        
+        font-size: 1rem;
+    }
+
+    .main {
+    height: 17rem;
+
+    }
+
+    .main .content div{
+        font-size: 1rem;
+    }
 }
