--- a/Site-4/css/estilo.css
+++ b/Site-4/css/estilo.css
@@ -52,6 +52,10 @@ body {
     width: 2rem;
 }
 
+.menu-mobile {
+    display: none;
+}
+
 .menu-top {
     display: flex;
 }
@@ -231,5 +235,65 @@ body {
         width: 100%;
         background-color: rgb(235, 229, 229);
         margin: 6px auto;
+        transition-duration: 0.2s;
+    }
+
+    /* MENU SELECIONADO */
+
+    .menu-hamb.on {
+        position: absolute;
+        top: 0;
+        left: 0;
+
+        background-color: rgb(28, 15, 41);
+        width: 100vw;
+        height: 100vh;
+
+        z-index: 10;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .menu-mobile {
+        display: block;
+    }
+
+    .menu-toggle {
+        position: absolute;
+        right: 0.5rem;
+        top: 1.5rem;
+    }
+
+    .menu-toggle .one {
+        transform: rotate(45deg) translate(7px, 7px);
+    }
+
+    .menu-toggle .two {
+        opacity: 0;
+    }
+
+    .menu-toggle .three {
+        transform: rotate(-45deg) translate(7px, -7px);
+    }
+
+    .header-menu {
+        text-align: center;
+        display: block;
+    }
+
+    .header-menu a{
+        transition-duration: 0.3s;
+        font-size: 2.3rem;
+        line-height: 4.3rem;
+        margin-bottom: 1.5rem;
+        
+        display: block;
+    }
+
+    .login {
+        border: none;
+        padding: 0;
     }
 }
