--- a/Site-4/css/estilo.css
+++ b/Site-4/css/estilo.css
@@ -94,7 +94,7 @@ body {
     align-items: center;
     width: 100%;
     max-width: 970px;
-    height: 15rem;
+    height: max-content;
     border-radius: 1rem;
     margin: auto;
     margin-top: 4rem;
@@ -120,9 +120,7 @@ body {
     font-size: 1.15rem;
     margin-left: 2rem;
     text-align: justify;
-    height: fit-content;
-    top: 5rem;
-    transform: translateY(-50%);
+    background-color: turquoise;
 }
 
 .main {
@@ -130,8 +128,7 @@ body {
     align-items: center;
     width: 100%;
     max-width: 970px;
-    height: 100%;
-    min-height: fit-content;
+    height: max-content;
     background-color: aquamarine;
     border-radius: 1rem;
     margin: auto;
@@ -194,7 +191,7 @@ body {
 
 .footer .logo {
     position: relative;
-    right: 25rem;
+    
 }
 .footer .logo a img{
     position: relative;
@@ -208,13 +205,15 @@ body {
         font-size: 1.1rem;
     }
 
-    .main {
-    height: 17rem;
-
+    .main .content {
+        position: relative;
+        display: block;
+        text-align: center;
     }
 
     .main .content div{
         font-size: 1.1rem;
+        margin: 0;
     }
 }
 
@@ -256,25 +255,25 @@ body {
         align-items: center;
     }
 
-    .menu-mobile {
+    .menu-hamb.on .menu-mobile {
         display: block;
     }
 
-    .menu-toggle {
+    .menu-hamb.on .menu-toggle {
         position: absolute;
         right: 0.5rem;
         top: 1.5rem;
     }
 
-    .menu-toggle .one {
+    .menu-hamb.on .menu-toggle .one {
         transform: rotate(45deg) translate(7px, 7px);
     }
 
-    .menu-toggle .two {
+    .menu-hamb.on .menu-toggle .two {
         opacity: 0;
     }
 
-    .menu-toggle .three {
+    .menu-hamb.on .menu-toggle .three {
         transform: rotate(-45deg) translate(7px, -7px);
     }
 
@@ -295,5 +294,19 @@ body {
     .login {
         border: none;
         padding: 0;
+    }
+
+    /* SECTIONS */
+
+    .carousel .content {
+        position: relative;
+        display: block;
+        text-align: center;
+    }
+
+    /* FOOTER */
+
+    .footer {
+        display: block;
     }
 }
