--- a/Site-4/css/estilo.css
+++ b/Site-4/css/estilo.css
@@ -248,7 +248,6 @@ body {
 
     .menu-hamb.on .menu-mobile {
         display: block;
-
     }
 
     .menu-hamb.on .menu-toggle {
@@ -310,8 +309,7 @@ body {
 
     .footer .logo {
         display: block;
-        margin: 0;
-        width: fit-content;
         text-align: center;
+        background-color:transparent;
     }
 }
