--- a/Site-4/css/Cadastro-2-estilo.css
+++ b/Site-4/css/Cadastro-2-estilo.css
@@ -3,45 +3,41 @@ body {
     background-color: rgb(192, 191, 191);
 }
 
-main {
-    margin-top: 50px;
-    margin-right: 200px;
-    margin-left: 200px;
-    margin-bottom: 50px;
-
-}
-
-.container-1 {
-    position: relative;
-    width: 100%;
-    height: 420px;
-    padding: 25px;
-   
-}
-
-.content-1 {
-    width: 70%;
-    height: 100%;
+.main {
     background-color: rgb(255, 255, 255);
-    float: left;
-    margin-right: 10px;
-    border-radius: 10px;
-    padding: 20px;
-    box-shadow: 2px 3px rgba(0, 0, 0, 0.164);
+    display: flex;
+    align-items: center;
+    max-width: 30rem;
+    border-radius: 1rem;
+    margin: auto;
+    margin-top: 4rem;
+    margin-bottom: 2rem;
+    box-shadow: 0.19rem 0.19rem rgba(0, 0, 0, 0.178);
 }
 
-.content-1 div {
+.main .content {
     width: 100%;
-    height: 100%;
+
+    margin: 3rem;
+    margin-top: 2rem;
+    margin-bottom: 1.5rem;
 }
 
-.content-1 h3 {
-    margin-bottom: 15px;
+h3 {
+    margin-bottom: 1.5rem;
 }
 
-.form-cadastro input {
-    width: 250px;
-    height: 30px;
+form {
+    width: 100%;
+    display: block;
+    margin-bottom: 1rem;
+}
+
+#full-name-reader, #username-reader, #email-reader, #password-reader {
+    width: 100%;
+    max-width: 20rem;
+    margin-top: 0.5rem;
+    height: 2rem;
     font-size: 16px;
     padding-left: 3px;
     display: block;
@@ -51,14 +47,15 @@ main {
 }
 
 #audio-reader {
-    background-color: rgba(255, 255, 255, 0);
-    border: none;
+    width: 100%;
+    max-width: 20rem;
 }
 
 #sign-up-reader {
-    margin-top: 40px;
-    width: 100px;
-    height: 37px;
+    width: 5rem;
+    height: 2rem;
+    margin-top: 1rem;
+    display: block;
 
     background-color: rgb(58, 58, 197);
     border-radius: 5px;
@@ -70,6 +67,11 @@ main {
 }
 
 #sign-up-reader:hover {
-    background-color: rgb(33, 33, 172);
+    background-color: rgb(15, 15, 70);
+    cursor: pointer;
 }
 
+.outros a {
+    display: block;
+    margin-bottom: 0.2rem;
+}
