--- a/Site-4/css/Login-estilo.css
+++ b/Site-4/css/Login-estilo.css
@@ -3,40 +3,41 @@ body {
     background-color: rgb(192, 191, 191);
 }
 
-main {
-    margin-top: 50px;
-    margin-right: 200px;
-    margin-left: 200px;
-    margin-bottom: 50px;
-
-}
-
-.container-1 {
-    position: relative;
-    width: 100%;
-    height: 380px;
-    padding: 25px;
-   
-}
-
-.content-1 {
-    width: 70%;
-    height: 100%;
+.main {
     background-color: rgb(255, 255, 255);
-    float: left;
-    margin-right: 10px;
-    border-radius: 10px;
-    padding: 20px;
-    box-shadow: 2px 3px rgba(0, 0, 0, 0.164);
+    display: flex;
+    align-items: center;
+    max-width: 30rem;
+    border-radius: 1rem;
+    margin: auto;
+    margin-top: 4rem;
+    margin-bottom: 2rem;
+    box-shadow: 0.19rem 0.19rem rgba(0, 0, 0, 0.178);
 }
 
-.content-1 h3 {
-    margin-bottom: 15px;
+.main .content {
+    width: 100%;
+
+    margin: 3rem;
+    margin-top: 2rem;
+    margin-bottom: 1.5rem;
 }
 
-.form-login input {
-    width: 250px;
-    height: 30px;
+h3 {
+    margin-bottom: 1.5rem;
+}
+
+form {
+    width: 100%;
+    display: block;
+    margin-bottom: 1rem;
+}
+
+#email-user, #password-user {
+    width: 100%;
+    max-width: 20rem;
+    margin-top: 0.5rem;
+    height: 2rem;
     font-size: 16px;
     padding-left: 3px;
     display: block;
@@ -45,31 +46,25 @@ main {
     background-color: rgba(138, 221, 214, 0.342);
 }
 
-.form-cadastro input:last-child {
-    width: 100px;
+#login-user {
+    width: 5rem;
+    height: 2rem;
+
+    background-color: rgb(58, 58, 197);
+    border-radius: 5px;
+    color: white;
+    font-weight: bold;
+    border:none;
+
+    transition-property: background-color;
 }
 
-#log-in-user {
-    
-        margin-top: 40px;
-        margin-bottom: 40px;
-        width: 100px;
-        height: 37px;
-    
-        background-color: rgb(58, 58, 197);
-        border-radius: 5px;
-        color: white;
-        font-weight: bold;
-        border:none;
-
-        transition-property: background-color;
-}
-        
-#log-in-user:hover {
-        background-color: rgb(33, 33, 172);
+#login-user:hover {
+    background-color: rgb(15, 15, 70);
+    cursor: pointer;
 }
 
-.login-info {
+.outros a {
     display: block;
-    margin-bottom: 15px;
+    margin-bottom: 0.2rem;
 }
