--- a/Site-4/css/Sobre-estilo.css
+++ b/Site-4/css/Sobre-estilo.css
@@ -1,25 +1,19 @@
-
-
-main {
-    margin-top: 50px;
-    margin-right: 200px;
-    margin-left: 200px;
-    margin-bottom: 50px;
-
-}
-
-.container-1 {
+.main {
+    background-color: rgb(250, 250, 250);
+    display: flex;
+    align-items: center;
     width: 100%;
-    height: 280px;
-    background-color: white;
-    border-radius: 15px;
-    overflow: hidden;
-    padding: 25px;
-    box-shadow: 2px 3px rgba(192, 191, 191, 0.247);
+    max-width: 970px;
+    height: max-content;
+    border-radius: 1rem;
+    margin: auto;
+    margin-top: 4rem;
+    margin-bottom: 2rem;
+    box-shadow: 0.19rem 0.19rem rgba(0, 0, 0, 0.123);
 }
 
-.content-1 {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 17px;
-    
+.main .content {
+    display: flex;
+    height: max-content;
+    margin: 3rem;
 }
