--- a/Área de testes/sistema_login_cadastro/views/cadastro.html
+++ b/Área de testes/sistema_login_cadastro/views/cadastro.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tela login</title>
+    <title>Tela de cadastro</title>
 </head>
 <body>
+    <h1>Página de cadastro</h1>
     <form method="POST" action="">
-        <input type="text" placeholder="Login" name="login" id="a">
+        <input type="text" placeholder="Email" name="login" id="a">
         <input type="password" placeholder="Senha" name="password" id="b">
         <input type="submit" name="acao" value="Entrar">
     </form>
