--- a/Site-2/Home-estilo.css
+++ b/Site-2/Home-estilo.css
@@ -35,11 +35,15 @@ main {
     30% {left: 0%;}
     60% {left: 0%;}
     90% {left: -100%;}
+    98% {left: -50%;}
     100% {left: 100%;}
 }
 
 @keyframes move-3 {
-    0% {left: 0%;}
+    0% {left: 100%;}
+    30% {left: 0%;}
+    60% {left: 0%;}
+    80% {left: 100%;}
     100% {left: 100%;}
 }
 
@@ -111,9 +115,9 @@ main {
     bottom: 400px;
     left: 100%;
 
-    animation-delay: 10s;
-    /* animation-name: move-2; */
-    animation-duration: 3s;
+    animation-delay: 11s;
+    animation-name: move-3;
+    animation-duration: 10s;
     animation-fill-mode: forwards;
 
 }
